[project]
name = "solar-panel-angle-calculator"
version = "0.1.0"
description = "Calculates the optimal angle for a solar panel based on the current date, time, and geographic location."
authors = [
    {name = "chjanz",email = "chjanz@example.com"}
]
readme = "README.md"
requires-python = "^3.8"
dependencies = [
    "pytz (>=2025.1,<2026.0)",
    "astral (>=3.2,<4.0)",
    "geopy (>=2.4.1,<3.0.0)",
    "rich (>=13.9.4,<14.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
